--- a/edge-service.yml
+++ b/edge-service.yml
@@ -4,7 +4,7 @@ zuul:
     xactware:
       path: /xactware/**
       stripPrefix: true
-      url: http://localhost:2222/
+      url: http://localhost:2222/test
 
 server:
   port: 8080   # HTTP (Tomcat) port
